-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.3
-
None
-
-
a4442abdc034de7984e003c821939ce1b1976593 (qt/qtlocation/5.12)
The Android positioning plugin does not fetch and pass along the vertical accuracy information.
According to https://stackoverflow.com/questions/6993322/how-do-i-get-the-hdop-or-vdop-values-from-the-gps-locationmanager it is possible to get this info by registering a NMEA listener and parsing the raw nmea sentences
| For Gerrit Dashboard: QTBUG-64689 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 248052,3 | Collect vertical position accurancy details | 5.12 | qt/qtlocation | Status: MERGED | +2 | 0 |