Collect vertical position accurancy details

Android's platform API supports this piece of information since
API version 26.

Fixes: QTBUG-64689
Change-Id: I09cce4979f3f754cb9af11281de2fe0050b74da1
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>